force-app/main/default/objects/Job_Application__c/fields/Candidate_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Qualified__c</fullName>
    <description>shows qualification yes Or no</description>
    <formula>IF
(
CASE(  Position__r.Education_Requri__c  ,
 
&quot;High School&quot;, 1,
&quot;College&quot;, 2, 
&quot;Masters&quot;, 3,
&quot;PhD&quot;, 4,
&quot;Post-doc&quot;, 5,0)


&gt;


CASE(  Candidate__r.Education__c  ,  
&quot;High School&quot;, 1,
&quot;College&quot;,2, 
&quot;Masters&quot;, 3,
&quot;PhD&quot;, 4,
&quot;Post-doc&quot;, 5, 0), 


&quot;Not Qualified&quot;, &quot;Qualified&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>..................................................</inlineHelpText>
    <label>Candidate Qualified</label>
    <type>Text</type>
</CustomField>