force-app/main/default/objects/Job_Application__c/fields/count_of_app__c.field-meta.xml
<CustomField>
    <fullName>count_of_app__c</fullName>
    <description>count of number</description>
    <inlineHelpText>-----------------------------</inlineHelpText>
    <label>count of app</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>