force-app/main/default/objects/Job_Application__c/fields/Job_status__c.field-meta.xml
<CustomField>
    <fullName>Job_status__c</fullName>
    <label>Job status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>