force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>holds info about position</description>
    <inlineHelpText>......................................</inlineHelpText>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>