force-app/main/default/objects/Job_Application__c/recordTypes/Sub.recordType-meta.xml
<RecordType>
    <fullName>Sub</fullName>
    <active>true</active>
    <label>Sub</label>
</RecordType>